# C-languge-Homework-1

./: README.md
Doubly Linked List/: CMakeLists.txt  DoubleLinkedListTest.cpp  DoubleLinkedListTest.h  main.cpp  setup.sh
Doubly Linked List/DoublyLinkedList/: CMakeLists.txt  ConstDoublyLinkedListIterator.h  ConstReverseDoublyLinkedListIterator.h  DoubleLinkedNode.h  DoublyLinkedList.h  DoublyLinkedListIterator.h  ReverseDoublyLinkedListIterator.h
Matrix/tests/: CMakeLists.txt  ObjectObjectTestCase.cpp  ObjectObjectTestCase.h  ObjectScalarTestCase.cpp  ObjectScalarTestCase.h  TestMatrix.cpp  TestMatrix.h  main.cpp
Matrix/tests/Matrices/: CMakeLists.txt  ConstructorTests.cpp  MemberTests.cpp  TestMatrix.cpp  TestMatrix.h  TestMatrixAndMatrix.cpp  TestMatrixAndMatrix.h  TestMatrixAndScalar.cpp  TestMatrixAndScalar.h
Matrix/tests/Matrices/Answers/MatrixAndMatrix/Minus/: Matrix-5-7_minus_Matrix-5-7.txt
Matrix/tests/Matrices/Answers/MatrixAndMatrix/Multiply/: Matrix-1-1_times_Matrix-1-1.txt  Matrix-2-2_times_Matrix-2-2.txt  Matrix-5-5_times_Matrix-5-5.txt
Matrix/tests/Matrices/Answers/MatrixAndMatrix/Plus/: Matrix-1-1_plus_Matrix-1-1.txt  Matrix-2-2_plus_Matrix-2-2.txt  Matrix-3-4_plus_Matrix-3-4.txt  Matrix-4-3_plus_Matrix-4-3.txt  Matrix-5-5_plus_Matrix-5-5.txt  Matrix-5-7_plus_Matrix-5-7.txt  Matrix-8-3_plus_Matrix-8-3.txt
Matrix/tests/Matrices/Answers/MatrixAndScalar/Divide/: Matrix-1-1_divide_-20.txt  Matrix-1-1_divide_-34.txt  Matrix-1-1_divide_10.txt  Matrix-1-1_divide_5.txt  Matrix-2-2_divide_-20.txt  Matrix-2-2_divide_-34.txt  Matrix-2-2_divide_1.txt  Matrix-2-2_divide_10.txt  Matrix-2-2_divide_5.txt  Matrix-3-4_divide_-20.txt  Matrix-3-4_divide_-34.txt  Matrix-3-4_divide_1.txt  Matrix-3-4_divide_10.txt  Matrix-3-4_divide_5.txt  Matrix-4-3_divide_-20.txt  Matrix-4-3_divide_-34.txt  Matrix-4-3_divide_1.txt  Matrix-4-3_divide_10.txt  Matrix-4-3_divide_5.txt  Matrix-5-5_divide_-20.txt  Matrix-5-5_divide_-34.txt  Matrix-5-5_divide_10.txt  Matrix-5-5_divide_5.txt  Matrix-5-7_divide_-20.txt  Matrix-5-7_divide_-34.txt  Matrix-5-7_divide_10.txt  Matrix-5-7_divide_5.txt  Matrix-8-3_divide_-20.txt  Matrix-8-3_divide_-34.txt  Matrix-8-3_divide_10.txt  Matrix-8-3_divide_5.txt
Matrix/tests/Matrices/Answers/MatrixAndScalar/Minus/: Matrix-1-1_minus_-20.txt  Matrix-1-1_minus_-34.txt  Matrix-1-1_minus_1.txt  Matrix-1-1_minus_10.txt  Matrix-1-1_minus_5.txt  Matrix-2-2_minus_-20.txt  Matrix-2-2_minus_-34.txt  Matrix-2-2_minus_1.txt  Matrix-2-2_minus_10.txt  Matrix-2-2_minus_5.txt  Matrix-3-4_minus_-20.txt  Matrix-3-4_minus_-34.txt  Matrix-3-4_minus_1.txt  Matrix-3-4_minus_10.txt  Matrix-3-4_minus_5.txt  Matrix-4-3_minus_-20.txt  Matrix-4-3_minus_-34.txt  Matrix-4-3_minus_1.txt  Matrix-4-3_minus_10.txt  Matrix-4-3_minus_5.txt  Matrix-5-5_minus_-20.txt  Matrix-5-5_minus_-34.txt  Matrix-5-5_minus_1.txt  Matrix-5-5_minus_10.txt  Matrix-5-5_minus_5.txt  Matrix-5-7_minus_-20.txt  Matrix-5-7_minus_-34.txt  Matrix-5-7_minus_0.txt  Matrix-5-7_minus_1.txt  Matrix-5-7_minus_10.txt  Matrix-5-7_minus_5.txt  Matrix-8-3_minus_-20.txt  Matrix-8-3_minus_-34.txt  Matrix-8-3_minus_1.txt  Matrix-8-3_minus_10.txt  Matrix-8-3_minus_5.txt
Matrix/tests/Matrices/Answers/MatrixAndScalar/Multiply/: Matrix-1-1_times_-20.txt  Matrix-1-1_times_-34.txt  Matrix-1-1_times_10.txt  Matrix-1-1_times_5.txt  Matrix-2-2_times_-20.txt  Matrix-2-2_times_-34.txt  Matrix-2-2_times_0.txt  Matrix-2-2_times_10.txt  Matrix-2-2_times_5.txt  Matrix-3-4_times_-20.txt  Matrix-3-4_times_-34.txt  Matrix-3-4_times_0.txt  Matrix-3-4_times_10.txt  Matrix-3-4_times_5.txt  Matrix-4-3_times_-20.txt  Matrix-4-3_times_-34.txt  Matrix-4-3_times_0.txt  Matrix-4-3_times_10.txt  Matrix-4-3_times_5.txt  Matrix-5-5_times_-20.txt  Matrix-5-5_times_-34.txt  Matrix-5-5_times_0.txt  Matrix-5-5_times_1.txt  Matrix-5-5_times_10.txt  Matrix-5-5_times_5.txt  Matrix-5-7_times_-20.txt  Matrix-5-7_times_-34.txt  Matrix-5-7_times_0.txt  Matrix-5-7_times_10.txt  Matrix-5-7_times_5.txt  Matrix-8-3_times_-20.txt  Matrix-8-3_times_-34.txt  Matrix-8-3_times_0.txt  Matrix-8-3_times_10.txt  Matrix-8-3_times_5.txt
Matrix/tests/Matrices/Answers/MatrixAndScalar/Plus/: Matrix-1-1_plus_-20.txt  Matrix-1-1_plus_-34.txt  Matrix-1-1_plus_0.txt  Matrix-1-1_plus_1.txt  Matrix-1-1_plus_10.txt  Matrix-1-1_plus_5.txt  Matrix-2-2_plus_-20.txt  Matrix-2-2_plus_-34.txt  Matrix-2-2_plus_1.txt  Matrix-2-2_plus_10.txt  Matrix-2-2_plus_5.txt  Matrix-3-4_plus_-20.txt  Matrix-3-4_plus_-34.txt  Matrix-3-4_plus_1.txt  Matrix-3-4_plus_10.txt  Matrix-3-4_plus_5.txt  Matrix-4-3_plus_-20.txt  Matrix-4-3_plus_-34.txt  Matrix-4-3_plus_1.txt  Matrix-4-3_plus_10.txt  Matrix-4-3_plus_5.txt  Matrix-5-5_plus_-20.txt  Matrix-5-5_plus_-34.txt  Matrix-5-5_plus_1.txt  Matrix-5-5_plus_10.txt  Matrix-5-5_plus_5.txt  Matrix-5-7_plus_-20.txt  Matrix-5-7_plus_-34.txt  Matrix-5-7_plus_1.txt  Matrix-5-7_plus_10.txt  Matrix-5-7_plus_5.txt  Matrix-8-3_plus_-20.txt  Matrix-8-3_plus_-34.txt  Matrix-8-3_plus_0.txt  Matrix-8-3_plus_1.txt  Matrix-8-3_plus_10.txt  Matrix-8-3_plus_5.txt
Matrix/tests/Matrices/Answers/MatrixAndScalar/ScalarMinus/: -20_minus_Matrix-1-1.txt  -20_minus_Matrix-2-2.txt  -20_minus_Matrix-3-4.txt  -20_minus_Matrix-4-3.txt  -20_minus_Matrix-5-5.txt  -20_minus_Matrix-5-7.txt  -20_minus_Matrix-8-3.txt  -34_minus_Matrix-1-1.txt  -34_minus_Matrix-2-2.txt  -34_minus_Matrix-3-4.txt  -34_minus_Matrix-4-3.txt  -34_minus_Matrix-5-5.txt  0_minus_Matrix-1-1.txt  (+29 more)
Matrix/tests/Matrices/Inputs/: Matrix-1-1.txt  Matrix-2-2.txt  Matrix-3-4.txt  Matrix-4-3.txt  Matrix-5-5.txt  Matrix-5-7.txt  Matrix-8-3.txt
Matrix/tests/Vector/: CMakeLists.txt  ConstructorTests.cpp  MemberTests.cpp  ScalarArithmeticTests.cpp  TestVector.cpp  TestVector.h  TestVectorAndScalar.cpp  TestVectorAndScalar.h  TestVectorAndVector.cpp  TestVectorAndVector.h
Matrix/tests/Vector/Inputs/: VectorV1-1.txt  VectorV1-10.txt  VectorV1-27.txt  VectorV1-36.txt  VectorV1-5.txt  VectorV2-1.txt  VectorV2-10.txt  VectorV2-27.txt  VectorV2-36.txt  VectorV2-5.txt  VectorV3-1.txt  VectorV3-10.txt  VectorV3-27.txt  VectorV3-36.txt  VectorV3-5.txt
(+474 files in other folders)
